test/1.2/errors/T_EBINOP.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

method init {
    /// ERROR EBTYPE
    5 & true;
    /// ERROR EBTYPE
    5 | true;
    /// ERROR EBTYPE
    5 ^ true;
    /// ERROR EBTYPE
    5 << true;
    /// ERROR EBTYPE
    5 >> true;
    /// ERROR EBTYPE
    5 * true;
    /// ERROR EBTYPE
    5 / true;
    /// ERROR EBTYPE
    5 % true;
    /// ERROR EBINOP
    5 + true;
    /// ERROR EBINOP
    5 - true;
    local int *p = NULL;
    /// ERROR EBTYPE
    p * 5;
    /// ERROR EBTYPE
    p / 5;
}
